Adding separation for phone number and customers
